Wrote the README.md file and completed the necessary code in the index.html and style.css files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Code for the Header Section of the Application -->
     <header>
         <h1>Kane Layng</h1>
         <nav>
@@ -30,6 +31,7 @@
     </header>
 
     <main>
+        <!-- Code for the About Me Sub-Section of the Application -->
         <section id="about-me">
             <h2>About Me</h2>
             <img src="./assets/images/Layng, Kane - Headshot.jpeg" alt="A picture of this project's maker, Kane Layng - a young, white, brunette man - in a suit ">
@@ -41,30 +43,39 @@
                 which I am on track to graduate from in mid-July of 2023.</p> 
         </section>
 
+        <!-- Code for the My Work Sub-Section of the Application -->
         <section id="my-work">
             <h2>My Work</h2>
             <ul>
                 <li id="my-first-deployed-application">
+                    <h3>Prework Study Guide</h3>
                     <a href="https://toastystudent.github.io/prework-study-guide/"><img 
                         src="./assets/images/Pre-Work Study Guide Sceenshot.png" 
                         alt="A screenshot of the loaded Pre-Work Study Guide application"></a>
                 </li>
 
                 <li id="my-other-applications">
-                    <a href="https://toastystudent.github.io/01-Homework-Horeison-HTML-Element-Challenge/"><img 
+                    <h3>First Homework Assignment</h3>
+                    <a href="https://toastystudent.github.io/01-Homework-Horeison-HTML-Element-Challenge/">
+                        <img 
                         src="./assets/images/01-Homework Sceenshot.png" 
-                        alt="A screenshot of the loaded Horeison website application"></a> 
+                        alt="A screenshot of the loaded Horeison website application">
+                    </a> 
                 </li>
 
                 <li id="my-other-applications">
-                    <a href="https://toastystudent.github.io/02-Homework-My-First-Portfolio-Challenge/"><img 
+                    <h3>First Portfolio</h3>
+                    <a href="https://toastystudent.github.io/02-Homework-My-First-Portfolio-Challenge/">
+                        <img 
                         src="./assets/images/01-Homework Sceenshot.png" 
-                        alt="A screenshot of this portfolio application"></a>
+                        alt="A screenshot of this portfolio application">
+                    </a>
                     
                 </li>
             </ul>
         </section>
 
+        <!-- Code for the Contact Info Sub-Section of the Application -->
         <section id="contact-info">
             <h2>Contact Information</h2>
             <ul>
