Replaced the placeholder image for the First Portfolio img with a screenshot of this deployed application which I also added to the RREADME.md file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h3>First Portfolio</h3>
                     <a href="https://toastystudent.github.io/02-Homework-My-First-Portfolio-Challenge/">
                         <img 
-                        src="./assets/images/01-Homework Sceenshot.png" 
+                        src="./assets/images/02-Homework Screenshot.png" 
                         alt="A screenshot of this portfolio application">
                     </a>
                     
