Added a list element corresponding to my first project, VaCASHin, in the unordered list of applications

--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@
                         src="./assets/images/02-Homework Screenshot.png" 
                         alt="A screenshot of this portfolio application">
                     </a>
-                    
+                </li>
+
+                <li id="my-other-applications">
+                    <h3>First Project</h3>
+                    <a href="https://the-ghrk-group.github.io/VaCASHin/">
+                        <img
+                        src="./assets/images/vacashin.png"
+                        alt="A screenshot of the loaded VaCASHin application">
+                    </a>
                 </li>
             </ul>
         </section>
